bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: ')' expected but 'if' found.
    case (false,a if a<0, b if b>0) => return true
                  ^PosNeg:7: error: '=>' expected but '}' found.
  }
  ^