bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  (negative,a,b) match {
    case (false,a if a<0, b if b>0) => return true
    case (false, a if a>0,b if b<0) => return true
    case (false,a if a<0,b if b<0) => return true
    case _ => return false
  }
}